# sage-data-client

./: .gitignore  README.md  setup.cfg  setup.py
.github/workflows/: cicd.yaml
examples/: Downloading data from Sage for SGP.ipynb  data.json  download sage camera images.ipynb  download_latest_image.py  join_queries.py  load_data.py  plotting_example.ipynb  plotting_example_with_experimental_aggregations.ipynb  pressure_event_trigger.py  print_rain_event_image_urls.py  raingauge_totals.py  temperature_stats.py  trigger-batch.py  trigger-stream.py  watch.py
examples/contrib/: bird_detection.ipynb  geospatial_mapping_example_v2.ipynb
sage_data_client/: __init__.py
src/sage_data_client/: __init__.py  query.py
tests/: test-data.ndjson  test_query.py
