[metadata]
name = sage-data-client
version = 0.0.0
author = Sean Shahkarami
author_email = sean.shahkarami@gmail.com
description = Official Sage data client.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sagecontinuum/sage-data-client
project_urls =
    Bug Tracker = https://github.com/sagecontinuum/sage-data-client/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
python_requires = >=3.6
install_requires =
    pandas>=2.0.0
    pyarrow>=7.0.0
package_dir=
    =src
packages=find:

[options.packages.find]
where=src
